# RetailPlatform

./: .env.sample  .gitignore  manage.py  pyproject.toml  readme.md  requirements.txt
network/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
network/migrations/: 0001_initial.py  0002_alter_networknode_options_alter_product_options_and_more.py
network/tests/: test_admin.py  test_models.py  test_product_api.py
retail_platform/: asgi.py  settings.py  urls.py  wsgi.py
