[tool.poetry]
name = "retailplatform"
version = "0.1.0"
description = "Retail Platform Network Management System"
authors = ["gvriil <0020992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"  # Updated to match flake8's requirement
django = "4.2.23"
djangorestframework = "3.15.2"
django-filter = "23.5"
psycopg2-binary = "2.9.10"
python-dotenv = "1.0.1"
asgiref = "3.8.1"
black = "23.12.1"
click = "8.1.8"
flake8 = "6.1.0"
iniconfig = "2.1.0"
mccabe = "0.7.0"
mypy-extensions = "1.1.0"
packaging = "25.0"
pathspec = "0.12.1"
platformdirs = "4.3.6"
pluggy = "1.5.0"
pycodestyle = "2.11.1"
pyflakes = "3.1.0"
pytest = "7.4.4"
sqlparse = "0.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"